2011-10-18  Richard Frith-Macdonald <rfm@gnu.org>

	* standalone.conf: example configuration file for a standalone
	package installation.
	* Documentation/Base.gsdoc:
	Documentation improvements for packaging

2011-10-17  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Make sourcing of default config file more reliable.
	* configure: regenerate.

2011-10-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m:
	* Source/NSPropertyList.m:
	* Source/NSFileHandle.m:
	* Source/NSString.m:
	* Source/DocMakefile:
	* Documentation/Base.gsdoc:
	* Headers/Foundation/NSString.h:
	* Headers/Foundation/NSBundle.h:
	Documentation cleanups.

2011-10-17  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Foundation/NSXMLNode.h:
	* Source/NSXMLNode.m:
	Fixed NSXMLNode compilation when using the "pure" non-fragile ABI 
	(--disable-mixedabi was passed to Base configure).

2011-10-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSString.m (-initWithCoder:): In keyed coding the key
	"NS.bytes" may contain either an NSData or an NSString object. Not
	sure about the encoding, I am using UTF8.

2011-10-17  Richard Frith-Macdonald <rfm@gnu.org>

	* standalone.conf: First draft at a layout for standalone system
	deployment.

2011-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/common.h: Added Quentin's fix to get Clang to compile this
	without warnings.

2011-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/ObjectiveC2/NSBlocks.m:
	* Source/Additions/GSObjCRuntime.m:
	Fixes to build with latest gcc.

2011-10-15  Gregory Casamento <greg.casamento@gmail.com>

	* Documentation/GNUmakefile:
	* Documentation/README.initialize: Documentation referred to by
	NSThread warning.

2011-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* config.mak.in:
	Shift the responsibility for setting up macros controlling thread
	safety to gnustep-make, and use the compiler -pthread option there.

2011-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/unix/Makefile.preamble: